objects/project_cloud__Project_Stage_Gate__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Checklist_Completed_Date__c</fullName>
        <description>The date the Stage Gate was completed</description>
        <label>Checklist Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <description>A more in detail description of the Stage Gate and what impacts it has</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>project_cloud__Due_Date__c</fullName>
        <description>The expected date for the Stage Gate to be complete on the project</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Gate_Approval_Date__c</fullName>
        <description>The date the Stage Gate was approved</description>
        <label>Gate Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Gate_Performance__c</fullName>
        <description>How many days early or late the Stage Gate was completed (minus numbers indicate early completion)</description>
        <formula>project_cloud__Checklist_Completed_Date__c - project_cloud__Due_Date__c</formula>
        <label>Gate Performance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Percent_Complete__c</fullName>
        <description>The completion percent of the Stage Gate, calculated automatically by the Stage Gate Checklist Items status</description>
        <formula>IF(
	((project_cloud__Total_Completed_Items__c &gt; 0) &amp;&amp; ((project_cloud__Total_Checklist_Items__c + project_cloud__Stage_Gate_Process_Step__r.project_cloud__Total_Checklist_Items__c) &gt; 0)),
	IF(
		NOT(ISBLANK(project_cloud__Stage_Gate_Process_Step__c)),
			project_cloud__Total_Completed_Items__c / (project_cloud__Total_Checklist_Items__c + project_cloud__Stage_Gate_Process_Step__r.project_cloud__Total_Checklist_Items__c),
			project_cloud__Total_Completed_Items__c / project_cloud__Total_Checklist_Items__c
	),
	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Project Stage Gates</relationshipLabel>
        <relationshipName>Project_Stage_Gates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Stage_Gate_Process_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Stage Gate Process Step</label>
        <referenceTo>project_cloud__Stage_Gate_Process_Step__c</referenceTo>
        <relationshipLabel>Project Stage Gates</relationshipLabel>
        <relationshipName>Project_Stage_Gates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Go</fullName>
                </value>
                <value>
                    <fullName>Kill</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Skip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Total_Checklist_Items__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Checklist Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Total_Completed_Items__c</fullName>
        <description>Rollup summary for the number of completed checklist items.</description>
        <label>Total Completed Items</label>
        <summaryForeignKey>project_cloud__Stage_Gate_Checklist_Item_Status__c.project_cloud__Project_Stage_Gate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project Stage Gate</label>
    <nameField>
        <label>Project Stage Gate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Stage Gates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>